--- a/polygon/style.css
+++ b/polygon/style.css
@@ -12,7 +12,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background-color: #fff;
+    background-color: rgb(206, 186, 186);
 }
 
 canvas {
