--- a/kinetic_typography2/style.css
+++ b/kinetic_typography2/style.css
@@ -11,7 +11,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background-color: #ffffff;
+    background-color: #000000;
     touch-action: none;
 }
 
