--- a/drawing_tree/style.css
+++ b/drawing_tree/style.css
@@ -3,8 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+body {
+    width: 100vw;
+    height: 100vh;
+}
 #canvas1 {
+    margin: 0;
+    padding: 0;
     width: 100%;
     height: 100%;
     /* background: rgba(0, 0, 0, 0.897); */
