--- a/drawing_tree/style.css
+++ b/drawing_tree/style.css
@@ -12,5 +12,5 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    /* background: rgba(0, 0, 0, 0.897); */
+    background: rgba(0, 0, 0, 0.897);
 }
