--- a/drawing_tree/style.css
+++ b/drawing_tree/style.css
@@ -7,10 +7,17 @@ body {
     width: 100vw;
     height: 100vh;
 }
-#canvas1 {
+canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.897);
+}
+
+#canvas2 {
+    background: rgba(0, 0, 0, 0);
 }
