--- a/liquid_particle/style.css
+++ b/liquid_particle/style.css
@@ -14,6 +14,7 @@ nav {
     width: 200px;
     margin-left: 142px;
     z-index: 50;
+    position: absolute;
 }
 
 button {
@@ -71,4 +72,14 @@ button:hover::before {
     background: #000;
     color: white;
     font-size: 14px;
+    margin-left: 350px;
+}
+.topBlock {
+    width: 80%;
+    border: 2px solid #000;
+    color: black;
+    height: 70px;
+    top: -70px;
+    position: absolute;
+    left: 60px;
 }
