--- a/liquid_particle/style.css
+++ b/liquid_particle/style.css
@@ -8,7 +8,7 @@
 }
 
 .content {
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 nav {
@@ -28,7 +28,7 @@ button {
     margin-bottom: 5px;
     font-size: 14px;
 
-    border: 1px solid #000;
+    border: none;
     outline: none;
     background: none;
 }
@@ -111,4 +111,13 @@ button:hover::before {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+
 }
